k8s/app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: interview-app
spec:
  selector:
    app: interview-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interview-app
  template:
    metadata:
      labels:
        app: interview-app
    spec:
      containers:
      - name: interview-app
        image: wyliebrown1990/interview-app:1.9
        imagePullPolicy: Always #FML this caused so much confusion
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: uploads-storage
          mountPath: /code/uploads
      volumes:
      - name: uploads-storage
        persistentVolumeClaim:
          claimName: uploads-pvc
